Regression: Geometry Node: Crash: Empty meshes -> Join Geometry -> Convex Hull #103850

Closed
opened 2023-01-13 03:52:28 +01:00 by Colin Wade · 6 comments

System Information
Operating system: Windows-10-10.0.18363-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-01 22:10, hash: 0a85288462
Broken without Join Geometry, just for empty: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-12 16:47, hash: d0a552b5c6
Worked: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691

Short description of error
Blender crashes when two or more valid sources of empty (zero-vertex) geometry are joined, and then a convex hull is applied.
image.png

Exact steps for others to reproduce the error
Reproduce the node layout in the above image, and delete all vertices on the mesh.

Or, download the attached .blend file, and connect the Convex Hull node from any of the test cases to the Group Output node.
Test cases labeled "Safe" should not cause a crash, and test cases labeled "this crashes blender" should cause a crash.
JoinToConvexHullCrashDemo.blend

The .blend file opens fine on blender 3.4.1, but crashes immediately when opened with 3.5.0 alpha.

All test cases are shown here:
image.png

**System Information** Operating system: Windows-10-10.0.18363-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-01 22:10, hash: `0a85288462` Broken without `Join Geometry`, just for empty: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-12 16:47, hash: `d0a552b5c6` Worked: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` **Short description of error** Blender crashes when two or more valid sources of empty (zero-vertex) geometry are joined, and then a convex hull is applied. ![image.png](https://archive.blender.org/developer/F14146864/image.png) **Exact steps for others to reproduce the error** Reproduce the node layout in the above image, and delete all vertices on the mesh. Or, download the attached .blend file, and connect the Convex Hull node from any of the test cases to the Group Output node. Test cases labeled "Safe" should not cause a crash, and test cases labeled "this crashes blender" should cause a crash. [JoinToConvexHullCrashDemo.blend](https://archive.blender.org/developer/F14146888/JoinToConvexHullCrashDemo.blend) The .blend file opens fine on blender 3.4.1, but crashes immediately when opened with 3.5.0 alpha. All test cases are shown here: ![image.png](https://archive.blender.org/developer/F14146881/image.png)
Author

Added subscriber: @cowade

Added subscriber: @cowade
Colin Wade changed title from Crash from Join Geomerty followed by Convex Hull on multiple empty meshes to Crash from Join Geometry followed by Convex Hull on multiple empty meshes 2023-01-13 03:52:45 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Iliya Katushenock changed title from Crash from Join Geometry followed by Convex Hull on multiple empty meshes to Geometry Node: Crash: Empty meshes -> Join Geometry -> Convex Hull 2023-01-13 04:05:48 +01:00
Iliya Katushenock changed title from Geometry Node: Crash: Empty meshes -> Join Geometry -> Convex Hull to Regression: Geometry Node: Crash: Empty meshes -> Join Geometry -> Convex Hull 2023-01-13 04:15:13 +01:00

Added subscribers: @wannes.malfait, @mod_moder

Added subscribers: @wannes.malfait, @mod_moder
@wannes.malfait
Iliya Katushenock self-assigned this 2023-01-13 18:53:22 +01:00

This issue was referenced by e35053d369

This issue was referenced by e35053d369067cdc2d8308c241aa599fd22d8115
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103850
No description provided.